--- a/presets/shared.yml
+++ b/presets/shared.yml
@@ -66,6 +66,10 @@ symbolServerToolsImage: symbolplatform/symbol-server-private:tools-gcc-main-4dee
 symbolServerImage: symbolplatform/symbol-server-private:gcc-main-4dee623258
 symbolRestImage: symbolplatform/symbol-rest:1.3.1-alpha
 mongoImage: mongo:4.2.6-bionic
+logLevel: 'Info'
+# brokerLogLevel: 'Info'
+# recoveryLogLevel: 'Info'
+# serverLogLevel: 'Info'
 
 # node default info
 
