--- a/presets/shared.yml
+++ b/presets/shared.yml
@@ -62,8 +62,8 @@ maxNameSize: 64
 maxChildNamespaces: 256
 maxNamespaceDepth: 3
 batchVerificationRandomSource:
-symbolServerToolsImage: symbolplatform/symbol-server-private:tools-gcc-main-4aa719f643
-symbolServerImage: symbolplatform/symbol-server-private:gcc-main-4aa719f643
+symbolServerToolsImage: symbolplatform/symbol-server:tools-gcc-0.10.0.1
+symbolServerImage: symbolplatform/symbol-server:gcc-0.10.0.1
 symbolRestImage: symbolplatform/symbol-rest:1.3.1-alpha
 mongoImage: mongo:4.2.6-bionic
 logLevel: 'Info'
